Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <section class="main-content">
       <h3>
-<a id="data-commons-community" class="anchor" href="#data-commons-community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Data Commons Community.</h3>
+<a id="the-data-commons-community" class="anchor" href="#the-data-commons-community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Data Commons Community</h3>
 
-<p>Data commons community is a group of individuals and volunteers.Our goal is to provide a rich data library in Big Data world. We are currently impressed by Apache Spark and want to build tools around it.</p>
+<p>Data commons community is a group of data engineers and data scientists. Our goal is to provide a collection of rich, high-performance libraries to process data at scale. We are currently building these tools to work with Apache Spark.</p>
 
 <h3>
 <a id="products" class="anchor" href="#products" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Products</h3>
