--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Data-Commons : ">
+    <meta name="description" content="Data Commons : Enabling working with data at scale">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Data-Commons</title>
+    <title>Data Commons</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/data-commons">View on GitHub</a>
 
-          <h1 id="project_title">Data-Commons</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">Data Commons</h1>
+          <h2 id="project_tagline">Enabling working with data at scale</h2>
 
         </header>
     </div>
