Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h3>
 <a id="the-data-commons-project" class="anchor" href="#the-data-commons-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Data Commons Project</h3>
 
-<p>Data commons community is a group of passionate data engineers and data scientists. Our goal is to provide a collection of rich, high-performance libraries to process data at scale. We are currently building these tools to work with Apache Spark.</p>
+<p>Data commons community is a group of passionate data engineers and data scientists at ThoughtWorks. Our goal is to provide a collection of rich, high-performance libraries to automate various data processing tasks at scale. We are currently building these tools to work with Apache Spark platform.</p>
 
 <h3>
 <a id="active-projects" class="anchor" href="#active-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Active Projects</h3>
@@ -39,9 +39,9 @@
 
 <ul>
 <li>
-<strong>prep-buddy</strong> - A Scala / Java / Python library for cleansing, transforming and preparing large datasets for ML operations on Apache Spark.</li>
+<a href="http://data-commons.github.io/prep-buddy"><strong>prep-buddy</strong></a> - A Scala / Java / Python library for cleansing, transforming and preparing large datasets for ML operations on Apache Spark.</li>
 <li>
-<strong>protectr</strong> - A Scala / Java / Python library for anonymization, encryption and redaction operations for large datasets on Apache Spark.</li>
+<a href="http://data-commons.github.io/protectr"><strong>protectr</strong></a> - A Scala / Java / Python library for anonymization, encryption and redaction operations for large datasets on Apache Spark.</li>
 </ul>
 
 <h3>
